src/objects/Work_Part__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Parts</relationshipLabel>
        <relationshipName>Work_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maintenance_Cycle__c</fullName>
        <label>Maintenance_Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Parts</relationshipLabel>
        <relationshipName>Work_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>